# fp2023

.github/workflows/: PR.yml
LLVM_IR/: LLVM_IR.opam  LLVM_IR.opam.template  dune  dune-project
LLVM_IR/demos/: demoInterpret.ml  demoParse.ml  dune  interpretTests.t  parsingTests.t
LLVM_IR/demos/attachments/: fac.ll  fac_arg.ll  sum_args.ll  test.ll  triangle_square.ll
LLVM_IR/lib/: ast.ml  ast.mli  dune  main.ml  parser.ml  parser.mli
LLVM_IR/lib/afterParseCheck/: dune  ssaCheck.ml  test.ml
LLVM_IR/lib/ast/: ast.ml  dune
LLVM_IR/lib/common/: dune  irInts.ml  irInts.mli  stateMonad.ml
LLVM_IR/lib/interpreter/: dune  interpreting.ml  interpreting.mli  memory.ml  memory.mli  serialisation.ml  serialisation.mli  state.ml
LLVM_IR/lib/interpreter/instructions/: aggregate.ml  binary.ml  bitwise.ml  bitwise.mli  commonInterpInstructions.ml  commonInterpInstructions.mli  conversion.ml  dune  instructions.ml  instructions_common.ml  memoryAddress.ml  memoryAddress.mli  other.ml  termainator.ml  terminator.ml  unary.ml  vector.ml
LLVM_IR/lib/parser/: common.ml  common.mli  commonParser.ml  commonParser.mli  common_parser.ml  common_parser.mli  dune  instructions.ml  instructions.mli  parser.ml  parsing.ml  types.ml  values.ml
cov/LLVM_IR/: index.html  percent.txt
cov/LLVM_IR/demos/: demoAO.ml.html  demoNO.ml.html  demoParse.ml.html
cov/LLVM_IR/lib/: Pprintast.ml.html  Printast.ml.html  ast.ml.html  interpret.ml.html  lambda.ml.html  parser.ml.html  tests.ml.html  utils.ml.html
docs/LLVM_IR/: index.html
docs/LLVM_IR/LLVM_IR/: index.html
docs/LLVM_IR/LLVM_IR/Ast/: index.html
docs/LLVM_IR/LLVM_IR/Checks/: index.html
(+53 files in other folders)
