(include_subdirs qualified)

(library
 (name interpreter)
 (public_name LLVM_IR.interpreter)
 (libraries ast base ppx_show.runtime)
 (inline_tests)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord ppx_expect))
 (instrumentation
  (backend bisect_ppx)))

; (library
;  (name tests)
;  (modules tests)
;  (libraries lambda_lib)
;  (preprocess
;   (pps ppx_expect ppx_deriving.show))
;  (instrumentation
;   (backend bisect_ppx))
;  (inline_tests))
