(library
 (name parser)
 (public_name LLVM_IR.Parser)
 (modules commonParser parsing types values instructions)
 (libraries ast common base angstrom ppx_show.runtime)
 (inline_tests)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord ppx_expect))
 (instrumentation
  (backend bisect_ppx)))

; (library
;  (name tests)
;  (modules tests)
;  (libraries lambda_lib)
;  (preprocess
;   (pps ppx_expect ppx_deriving.show))
;  (instrumentation
;   (backend bisect_ppx))
;  (inline_tests))
